samples/_failures_safe/1761478947_b63fd0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4b27238.c: In function ‘main’:
./samples/SAFE/__tmp_e4b27238.c:151:5: error: expected declaration or statement at end of input
  151 |     }
      |     ^
